deploy: aa7686b78a36bb6dfb977eebdc45d4e924bfd4a0

--- a/method_list.html
+++ b/method_list.html
@@ -94,21 +94,13 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#add_leading_spaces-instance_method" title="Synvert::Core::Rewriter::Instance#add_leading_spaces (method)">#add_leading_spaces</a></span>
-      <small>Synvert::Core::Rewriter::Instance</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Helper.html#add_receiver_if_necessary-instance_method" title="Synvert::Core::Rewriter::Helper#add_receiver_if_necessary (method)">#add_receiver_if_necessary</a></span>
       <small>Synvert::Core::Rewriter::Helper</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_snippet-instance_method" title="Synvert::Core::Rewriter#add_snippet (method)">#add_snippet</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -116,7 +108,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#add_warning-instance_method" title="Synvert::Core::Rewriter#add_warning (method)">#add_warning</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -124,7 +116,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#affected_files-instance_method" title="Synvert::Core::Rewriter#affected_files (method)">#affected_files</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -132,7 +124,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#append-instance_method" title="Synvert::Core::Rewriter::Instance#append (method)">#append</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -140,7 +132,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#availables-class_method" title="Synvert::Core::Helper.availables (method)">availables</a></span>
       <small>Synvert::Core::Helper</small>
@@ -148,7 +140,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#availables-class_method" title="Synvert::Core::Rewriter.availables (method)">availables</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -156,7 +148,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#block-instance_method" title="Synvert::Core::Helper#block (method)">#block</a></span>
       <small>Synvert::Core::Helper</small>
@@ -164,7 +156,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#call_helper-instance_method" title="Synvert::Core::Rewriter#call_helper (method)">#call_helper</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -172,7 +164,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#clear-class_method" title="Synvert::Core::Helper.clear (method)">clear</a></span>
       <small>Synvert::Core::Helper</small>
@@ -180,7 +172,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#clear-class_method" title="Synvert::Core::Rewriter.clear (method)">clear</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -188,7 +180,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#configure-instance_method" title="Synvert::Core::Rewriter#configure (method)">#configure</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -196,7 +188,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_node-instance_method" title="Synvert::Core::Rewriter::Instance#current_node (method)">#current_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -204,9 +196,17 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_parser-instance_method" title="Synvert::Core::Rewriter::Instance#current_parser (method)">#current_parser</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#dedent-instance_method" title="Synvert::Core::Rewriter::Instance#dedent (method)">#dedent</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
